# pegasus

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md
docs/: project-structure.md
src/: config.rs  error.rs  main.rs
src/api/: handlers.rs  mod.rs
src/download/: mod.rs
src/process/: mod.rs
src/transfer/: mod.rs
static/: index.html  script.js  styles.css
