[package]
name = "pegasus"
version = "0.1.0"
edition = "2024"

[dependencies]
# Added for async runtime
tokio = { version = "1", features = ["full"] }

# Added for error handling
thiserror = "1.0"

# Web framework
axum = { version = "0.7", features = ["ws"] }

# Serving static files and CORS handling (optional but common)
tower-http = { version = "0.5.0", features = ["fs", "cors"] }

# Serialization/Deserialization for API requests/responses
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Environment variable loading from .env file
dotenvy = "0.15"

# --- External dependencies ---
reqwest = { version = "0.12", features = [
  "json",
] } # For making HTTP requests and downloading thumbnails
# config = "0.14" # For configuration management

# Added for WebSocket and async operations
futures = "0.3"

# Added for generating unique IDs
uuid = { version = "1.3", features = ["v4"] }

# Added for regex parsing of yt-dlp output
regex = "1.5"

# Added for static lazy initialization
once_cell = "1.19"
